[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "qr-code-ai-mcp"
version = "1.0.0"
description = "Qr Code Ai tools for AI agents. Capabilities: generate qr data, decode qr data, create vcard qr. Built by MEOK AI Labs."
license = {file = "LICENSE"}
requires-python = ">=3.10"
authors = [{name = "MEOK AI Labs", email = "nicholas@meok.ai"}]
dependencies = ["mcp>=1.0.0"]
keywords = ["mcp", "ai", "meok", "code"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
]
[project.urls]
Homepage = "https://meok.ai"
Repository = "https://github.com/CSOAI-ORG/qr-code-ai-mcp"
[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["server.py"]

[project.scripts]
qr_code_ai_mcp = "server:main"
